--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -1,12 +1,12 @@
-.Clock{
-	width:500px;
-	height: 500px;
-	border-radius: 50%;
-	background-color: black;
-	position: relative;
-	z-index: 1;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.Clock {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  background-color: black;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
