--- a/src/components/CustomParts/CustomPlayButton/CustomPlayButton.css
+++ b/src/components/CustomParts/CustomPlayButton/CustomPlayButton.css
@@ -1,21 +1,20 @@
-.CustomPlayButton{
-	position: relative;
-	position: absolute;
-	height:50px;
-	width:50px;
-	background-color: rgb(213, 216, 56);
-	transform: rotate(315deg);
-	top:32px;
-	left:32px;
+.CustomPlayButton {
+  position: relative;
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  background-color: rgb(213, 216, 56);
+  transform: rotate(315deg);
+  top: 32px;
+  left: 32px;
 }
-.CustomPlayButton::before{
-	content: '';
-	width:75px;
-	height:20px;
-	background-color: darkgrey;
-	border-radius: 5px;
-	position: absolute;
-	top:0px;
-	right:-12.5px;
-
+.CustomPlayButton::before {
+  content: "";
+  width: 75px;
+  height: 20px;
+  background-color: darkgrey;
+  border-radius: 5px;
+  position: absolute;
+  top: 0px;
+  right: -12.5px;
 }
