--- a/src/components/CustomParts/CustomDisplay/CustomDisplay.css
+++ b/src/components/CustomParts/CustomDisplay/CustomDisplay.css
@@ -1,7 +1,7 @@
 .CustomDisplay {
   height: 75px;
-  background-color: #939b72;
-  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background-color: #b2c46e;
+  box-shadow: inset 5px 5px 1px rgba(5, 4, 4, 0.25),inset -5px -5px 1px rgba(5, 4, 4, 0.25) ;
   border-radius: 5px;
   z-index: 2;
   font-size: 36px;
