--- a/src/components/CustomParts/CustomDisplay/CustomDisplay.css
+++ b/src/components/CustomParts/CustomDisplay/CustomDisplay.css
@@ -1,7 +1,7 @@
 .CustomDisplay {
   height: 75px;
-  background-color: #b2c46e;
-  box-shadow: inset 5px 5px 1px rgba(5, 4, 4, 0.25),inset -5px -5px 1px rgba(5, 4, 4, 0.25) ;
+  background-color: #68753a;
+  box-shadow: inset 4px 5px 1px rgba(5, 4, 4, 0.25),inset -3px -3px 1px rgba(5, 4, 4, 0.25) ;  /*,inset -5px -5px 1px rgba(5, 4, 4, 0.25) */
   border-radius: 5px;
   z-index: 2;
   font-size: 36px;
@@ -9,3 +9,4 @@
   box-sizing: border-box;
   padding-top: 10px;
 }
+
