--- a/src/components/CustomParts/CustomDisplay/CustomDisplay.css
+++ b/src/components/CustomParts/CustomDisplay/CustomDisplay.css
@@ -1,7 +1,8 @@
 .CustomDisplay {
   height: 75px;
   background-color: #68753a;
-  box-shadow: inset 4px 5px 1px rgba(5, 4, 4, 0.25),inset -3px -3px 1px rgba(5, 4, 4, 0.25) ;  /*,inset -5px -5px 1px rgba(5, 4, 4, 0.25) */
+  box-shadow: inset 4px 5px 1px rgba(5, 4, 4, 0.25),
+    inset -3px -3px 1px rgba(5, 4, 4, 0.25); /*,inset -5px -5px 1px rgba(5, 4, 4, 0.25) */
   border-radius: 5px;
   z-index: 2;
   font-size: 36px;
@@ -9,4 +10,3 @@
   box-sizing: border-box;
   padding-top: 10px;
 }
-
