--- a/src/components/CustomParts/CustomPlayButton/CustomPlayButton.css
+++ b/src/components/CustomParts/CustomPlayButton/CustomPlayButton.css
@@ -1,7 +1,7 @@
 .CustomPlayButton {
   position: relative;
   position: absolute;
-  height: 50px;
+  height: 51px;
   width: 50px;
   background-color: rgb(213, 213, 213);
   transform: rotate(315deg);
@@ -38,4 +38,21 @@
     inset -7px 0px 5px rgba(5, 4, 4, 0.25);
   box-sizing: border-box;
   padding-top: 3px;
+}
+
+@media screen and (max-width:600px) {
+.CustomPlayButton {
+ height: 40px;
+  width: 40px;
+  top: 12px;
+  left: 10px;
+}
+
+.CustomPlayButton::before {
+font-size: 15px;
+width: 65px;
+  height: 25px;
+ top: 0px;
+  right: -12.5px;
+}
 }
