--- a/src/components/CustomParts/CustomTriangleButton/CustomTriangleButton.css
+++ b/src/components/CustomParts/CustomTriangleButton/CustomTriangleButton.css
@@ -1,5 +1,6 @@
 .Triangle {
   color: #f6ee1e;
+	font-size: 60px;
 }
 
 .Button {
@@ -7,4 +8,15 @@
   background-color: black;
   cursor: pointer;
   outline: none;
+}
+
+
+
+@media screen and (max-width:600px) {
+
+.Triangle{
+	font-size: 24px;
+}
+
+
 }
